Fixed resume and CV link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Contact: aharlap at andrew dot cmu dot edu <br>
 <hr>
 <h2> About me </h2>
 <p>
-I'm currently a fourth year PhD student of
+I'm currently a fifth year PhD student of
 <a href="http://www.pdl.cmu.edu/">Parallel Data Lab</a>
 at Carnegie Mellon University,
 advised by
