Updated w/ new resume, CV and thesis defense

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Aaron Harlap<br>
 Pittsburgh, PA 15213 <br>
 
 <br>
-Contact: aharlap at andrew dot cmu dot edu <br>
+Contact: aaron dot harlap at gmail dot com <br>
 
 </td>
 </tr>
@@ -56,7 +56,9 @@ and
 <a href="https://www.cs.cmu.edu/~gibbons/">Phil Gibbons</a>.
 </p>
 <p>
-My research is focused on improving ML applications in shared computing environments. 
+My research is focused on sytems for Machine Learning. In paritcualr I am interested in desigining ML systems
+<br> 
+that are able to efficiently execute in shared computing enviroments, such as AWS EC2 and Microsoft Azure.
 </p>
 <p>
 Before coming to CMU I completed my undergraduate study
@@ -65,6 +67,13 @@ at Northeastern University.
 <p>
 [<a href="./aharlap-resume.pdf">Resume</a>][<a href="./aharlap-cv.pdf">CV</a>]
 </p>
+
+
+<h2>Thesis</h2>
+<span style="font-weight: bold;">
+Improving ML applications in shared computing environments
+[<a href="./papers/aharlap_dissertation.pdf">pdf</a>]
+[<a href="./talks/thesis-defense.pdf">slides</a>]
 
 
 <h2>Publications</h2>
