Fixed link to dissertation slides

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ at Northeastern University.
 <span style="font-weight: bold;">
 Improving ML applications in shared computing environments
 [<a href="./papers/aharlap_dissertation.pdf">pdf</a>]
-[<a href="./talks/thesis-defense.pdf">slides</a>]
+[<a href="./talks/thesis-defense.pptx">slides</a>]
 
 
 <h2>Publications</h2>
