Fixed bug that was making everything bold

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Before coming to CMU I completed my undergraduate study
 at Northeastern University.
 </p>
 <p>
-[<a href="./aharlap-resume.pdf">Resume</a>][<a href="./aharlap-cv.pdf">CV</a>]
+[<a href="./aharlap_resume.pdf">Resume</a>][<a href="./aharlap-cv.pdf">CV</a>]
 </p>
 
 
@@ -74,7 +74,7 @@ at Northeastern University.
 Improving ML applications in shared computing environments
 [<a href="./papers/aharlap_dissertation.pdf">pdf</a>]
 [<a href="./talks/thesis-defense.pptx">slides</a>]
-
+</span><br>
 
 <h2>Publications</h2>
 
