--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ and
 <a href="https://www.cs.cmu.edu/~gibbons/">Phil Gibbons</a>.
 </p>
 <p>
-My research is focused on sytems for Machine Learning. In paritcualr I am interested in desigining ML systems
+My research is focused on sytems for Machine Learning. In particular I am interested in desigining ML systems
 <br> 
 that are able to efficiently execute in shared computing enviroments, such as AWS EC2 and Microsoft Azure.
 </p>
