--- a/index.html
+++ b/index.html
@@ -16,25 +16,11 @@
 <img src="./photos/photo-aaron.JPG" alt="Picture of Aaron Harlap" width="205" height="320" />
 </td>
 <td>
-<b>PhD Candidate</b><br>
-<a href="http://www.pdl.cmu.edu/">Parallel Data Lab</a> <br>
-<a href="http://www.ece.cmu.edu/">Department of Electrical and Computer Engineering</a><br>
-<a href="http://www.cmu.edu/">Carnegie Mellon University</a><br>
+<b>
+<br>Contact: <br></b> aaron dot harlap at gmail dot com 
+<br></b><br>
 <br>
 
-<br>
-</td>
-<td>
-&nbsp; &nbsp;&nbsp;&nbsp;
-</td>
-<td>
-Aaron Harlap<br>
-2220B, Collaborative Inovation Center (CIC)<br>
-5000 Forbes Avenue<br>
-Pittsburgh, PA 15213 <br>
-
-<br>
-Contact: aaron dot harlap at gmail dot com <br>
 
 </td>
 </tr>
@@ -47,21 +33,22 @@ Contact: aaron dot harlap at gmail dot com <br>
 <hr>
 <h2> About me </h2>
 <p>
-I'm currently a fifth year PhD student of
-<a href="http://www.pdl.cmu.edu/">Parallel Data Lab</a>
-at Carnegie Mellon University,
+I'm currently building machine learning systems <a href="https://determined.ai">Determined AI</a>.
+<p>
+Before that I completed my PhD student of
+at Carnegie Mellon University where I was 
 advised by
 <a href="http://www.ece.cmu.edu/~ganger/">Greg Ganger</a>
 and
 <a href="https://www.cs.cmu.edu/~gibbons/">Phil Gibbons</a>.
 </p>
 <p>
-My research is focused on sytems for Machine Learning. In particular I am interested in desigining ML systems
+My work focuses on sytems for Machine Learning. In particular I am interested in desigining ML systems
 <br> 
 that are able to efficiently execute in shared computing enviroments, such as AWS EC2 and Microsoft Azure.
 </p>
 <p>
-Before coming to CMU I completed my undergraduate study
+Before coming to CMU I completed my undergraduate studies
 at Northeastern University.
 </p>
 <p>
@@ -77,6 +64,20 @@ Improving ML applications in shared computing environments
 </span><br>
 
 <h2>Publications</h2>
+
+<span style="font-weight: bold;">
+PipeDream: Generalized Pipeline Parallelism for DNN Training
+[<a href="https://sosp19.rcs.uwaterloo.ca/program.html">link</a>]
+[<a href="./papers/sosp19-pipedream.pdf">pdf</a>]
+</span><br>
+Deepak Narayanan, <b>Aaron Harlap</b>, Amar Phanishayee,
+Vivek Seshadri, Nikhil R. Devanur, Gregory R. Ganger, Phillip B. Gibbons,
+Matei Zaharia
+<br>
+<i>ACM Symposium on Operating Systems Principles, 2019 (SOSP) </i>
+<br>
+<br>
+
 
 <span style="font-weight: bold;">
 Tributary: spot-dancing for elastic services with latency SLOs
