Update in July 20

--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@ and
 <a href="https://www.cs.cmu.edu/~gibbons/">Phil Gibbons</a>.
 </p>
 <p>
-My work focuses on sytems for Machine Learning. In particular I am interested in desigining ML systems
+My work focuses on systems for Machine Learning. In particular I am interested in designing ML systems
 <br> 
-that are able to efficiently execute in shared computing enviroments, such as AWS EC2 and Microsoft Azure.
+that can be efficiently deployed to shared computing environments, such as AWS EC2 and Microsoft Azure.
 </p>
 <p>
 Before coming to CMU I completed my undergraduate studies
 at Northeastern University.
 </p>
 <p>
-[<a href="./aharlap_resume.pdf">Resume</a>][<a href="./aharlap-cv.pdf">CV</a>]
+[<a href="./aharlap_resume.pdf">Resume</a>]
 </p>
 
 
@@ -142,6 +142,13 @@ Gregory R. Ganger, Phillip B. Gibbons, Garth A. Gibson, and Eric P. Xing
 
 <h2>Talks</h2>
 
+<span style="font-weight: bold;">
+Accelerating Deep Learning Development with Distributed Training
+[<a href="./talks/Determined-AI-Dtrain.pdf">slides</a>]
+</span><br>
+<i>Boston AI Meetup, Boston MA, February 2020</i>
+<br>
+<br>
 <span style="font-weight: bold;">
 Tributary: spot-dancing for elastic services with latency SLOs
 [<a href="./talks/usenix-atc-18-talk.pptx">slides</a>]
